agri-price tracker

--- a/frontend/agri-price-tracker/src/app/components/footer/footer.component.html
+++ b/frontend/agri-price-tracker/src/app/components/footer/footer.component.html
@@ -6,16 +6,16 @@
             <p>Empowering farmers with transparent pricing information and direct market access. 
                Fighting middleman exploitation through technology.</p>
             <div class="social-links">
-              <a href="#" class="social-link">
+              <a href="https://www.facebook.com/" class="social-link">
                 <i class="fab fa-facebook"></i>
               </a>
-              <a href="#" class="social-link">
+              <a href="https://x.com/home" class="social-link">
                 <i class="fab fa-twitter"></i>
               </a>
-              <a href="#" class="social-link">
+              <a href="https://www.instagram.com/" class="social-link">
                 <i class="fab fa-instagram"></i>
               </a>
-              <a href="#" class="social-link">
+              <a href="https://www.linkedin.com/feed" class="social-link">
                 <i class="fab fa-linkedin"></i>
               </a>
             </div>
