--- a/frontend/agri-price-tracker/src/app/components/public-portal/public-portal.component.html
+++ b/frontend/agri-price-tracker/src/app/components/public-portal/public-portal.component.html
@@ -208,7 +208,7 @@
                          [class.fa-arrow-up]="crop.prediction !== undefined && crop.currentPrice !== undefined && crop.prediction > crop.currentPrice"
                          [class.fa-arrow-down]="crop.prediction !== undefined && crop.currentPrice !== undefined && crop.prediction < crop.currentPrice"
                          [class.fa-minus]="crop.prediction !== undefined && crop.currentPrice !== undefined && crop.prediction === crop.currentPrice"></i>
-                      {{ getPredictionChange(crop.currentPrice ?? 0, crop.prediction ?? 0) }}%
+                      {{ getPredictionChange(crop.currentPrice, crop.prediction ?? 0) }}%
                     </div>
                   </div>
                 </div>
