current prices can be displayed now

--- a/frontend/agri-price-tracker/src/app/components/public-portal/public-portal.component.html
+++ b/frontend/agri-price-tracker/src/app/components/public-portal/public-portal.component.html
@@ -191,7 +191,7 @@
                     [class.fa-arrow-up]="crop.prediction !== undefined && crop.currentPrice !== undefined && crop.prediction > crop.currentPrice"
                     [class.fa-arrow-down]="crop.prediction !== undefined && crop.currentPrice !== undefined && crop.prediction < crop.currentPrice"
                     [class.fa-minus]="crop.prediction !== undefined && crop.currentPrice !== undefined && crop.prediction === crop.currentPrice"></i>
-                  {{ getPredictionChange(crop.currentPrice, crop.prediction ?? 0) }}%
+                  {{ getPredictionChange(crop.currentPrice, crop.prediction ) }}%
                 </div>
               </div>
             </div>
